# devops-engineer-from-scratch-project-49

./: .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml
asciinemas/: brain-calc-lose.cast  brain-calc-win.cast  brain-even-lose.cast  brain-even-win.cast  brain-gcd-lose.cast  brain-gcd-win.cast  brain-prime-lose.cast  brain-prime-win.cast  brain-progression-lose.cast  brain-progression-win.cast
brain_games/: cli.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-prime.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_progression.py  engine.py
