[project]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet devops course project 1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
